# calibre-metadata-api

./: .env  .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Dockerfile  README.md  cma.toml  crate-hashes.json  flake.nix  renovate.json
.github/workflows/: pull_request.yml  push_main.yml
.sqlx/: query-26eb6b4b89ff568bc214b03dbc5b63a8374b3c8077303a47aae5367606f4c9ab.json  query-43bc0a38bf265b7bb6dfbfb50e95e9ba659ef98ab62068bda5c3893b674aabf6.json  query-644c61d9ba630cb44a11c5a7d8309ff360d876a9f1e2fe9e7cdfa2baec3dda2f.json  query-656d55a48bfb8557954d38a574314bde1b3cee69d1891b463326b6d4879830f3.json  query-ac881170c2e16566b50020437e0345bd02305721541061b8585b31c41bece8df.json  query-bbdf5827deb564bedeaceea99be44db6151dab9b43ac518cc841c507fd04c8ca.json  query-c5952af71eb1b7f268fe11d8ecf69a475d6a60ba022d269f59be11d975d552e6.json  query-c916763ab8bf2b90f8fd937a454f13bd755e6360ab1f291a652dd284f3913e8a.json
calibreweb/: Cargo.toml  sqlx.toml
calibreweb/src/: lib.rs
examples/download-to-file/: Cargo.toml
examples/download-to-file/src/: main.rs
examples/download-to-file/templates/: author  author_filename  book  book_filename
src/: main.rs
