[package]
name = "calibre-metadata-api"
version = "0.0.1"
edition = "2024"
description = "API for Calibre's metadata DB"
license = "Apache-2.0"

[[bin]]
name = "cma"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.8.0", features = ["macros"]}
chrono = {version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"]}
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
service_conventions = { version = "0.0.30", features = ["tracing", "oidc"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "uuid", "chrono", "rust_decimal"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.9.0"
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
tower-http = { version = "0.6.0", features = ["tracing", "trace"] }
tracing = "0.1.40"
url = "2.5.0"
uuid = {version = "1.8.0", features = ["v4"]}

rust-embed = { version = "8.3.0", features = ["axum", "mime-guess", "mime_guess"] }
redacted = "0.2.0"
jsonwebtoken = "9.3.0"
indexmap = { version = "2.5.0", features = ["serde"] }
serde_qs = { version = "0.15.0", features = ["axum", "tracing"] }
thiserror = "2.0.0"
http = "1.1.0"

tower-cookies = { version = "0.11.0", features = ["signed", "private"]}
axum-extra = { version = "0.10.0", features = ["form", "query"] }
