[workspace]
members = [".", "examples/*"]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["."]
# Example has been deleted, but README.md remains
resolver = "3"

[package]
name = "calibre-metadata-api"
version = "0.0.1"
edition = "2024"
description = "API for Calibre's metadata DB"
license = "Apache-2.0"

[[bin]]
name = "cma"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.8.0", features = ["macros"]}
chrono = {version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"]}
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
service_conventions = { version = "0.0.32", features = ["tracing", "oidc"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.9.0"
tower-http = { version = "0.6.0", features = ["tracing", "trace", "cors", "compression-full"] }
tracing = "0.1.40"

axum-extra = { version = "0.12.0", features = ["form", "query"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
