[package]
name = "download-to-file"
version = "0.0.1"
edition = "2024"
description = "API for Calibre's metadata DB"
license = "Apache-2.0"
publish = false

[dependencies]

tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
clap = { version = "4", features = ["derive", "env"]}
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
tera = "1.20.0"
anyhow = "1.0.99"
